# system-stack-review-and-coach

./: .gitignore  AGENTS.md  AI_BOOTSTRAP.md  INITIAL_SCOPE.md  README.md  project-control.yaml  pyproject.toml
docs/: CHANGELOG.md  action-runner-contract.md  architecture.md  deployment-guide.md  maintenance-manager-plan.md  manual.md  release-checklist.md  roadmap.md  runbook.md  setup-linux.md  setup-windows-browser.md
docs/adrs/: 0001-local-web-gui.md
docs/exceptions/: EX-2026-04-05-governance-home.md
docs/risks/: risk-register.md
launchers/: install-desktop-entry.sh  run-stack-coach.sh  run-system-coach.sh
scripts/: governance-preflight.sh
src/stack_review_coach/: __init__.py  __main__.py  agents.py  ai_engine.py  desktop_app.py  exporting.py  knowledge.py  maintenance_actions.py  maintenance_history.py  maintenance_reporting.py  reporting.py  request_plans.py  scanner.py  server.py
src/stack_review_coach/web/: app.js  index.html  styles.css
src/system_coach_maintenance_manager/: __init__.py  __main__.py  agents.py  ai_engine.py  desktop_app.py  diagnostics.py  exporting.py  followup_plans.py  knowledge.py  maintenance_actions.py  maintenance_history.py  maintenance_reporting.py  reporting.py  request_evidence.py  request_plans.py  server.py  troubleshooting_model.py
tests/: test_ai_engine.py  test_diagnostics.py  test_followup_plans.py  test_maintenance_actions.py  test_maintenance_history.py  test_maintenance_reporting.py  test_reporting.py  test_request_evidence.py  test_request_plans.py  test_scanner.py
(+2 files in other folders)
