[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "system-stack-review-and-coach"
version = "0.1.0"
description = "Local-first system stack review, maintenance diagnostics, and coaching tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Adam Goodwin" }]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
stack-review-coach = "stack_review_coach.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stack_review_coach = ["web/*.html", "web/*.css", "web/*.js"]
