[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "system-coach-maintenance-manager"
version = "0.1.0"
description = "Local-first system coaching, maintenance diagnostics, and troubleshooting tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Adam Goodwin" }]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
system-coach = "system_coach_maintenance_manager.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
system_coach_maintenance_manager = ["web/*.html", "web/*.css", "web/*.js"]
